src/objects/MCAR_Email_List__c.object
<CustomObject>
    <fields>
        <fullName>MCAR_Contact_Type__c</fullName>
        <label>ContactType</label>
        <picklist>
            <picklistValues>
                <fullName>NSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MCAR_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MCAR_First_Name__c</fullName>
        <label>Name</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Role__c</fullName>
        <label>Role</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Selected__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCAR_Topic__c</fullName>
        <label>Topic</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_User_Account__c</fullName>
        <description>MCAR User Account to store user account name for mailing perpose</description>
        <label>MCAR User Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_User_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MCAR User Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCAR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MCARs</label>
        <referenceTo>MCAR__c</referenceTo>
        <relationshipLabel>MCAR Email List</relationshipLabel>
        <relationshipName>MCAR_Email_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Manager__c</fullName>
        <label>Supplier Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MCAR Email List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MCAR_Contact_Type__c</columns>
        <columns>MCAR_Email__c</columns>
        <columns>MCAR__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>MCAR_Topic__c</columns>
        <columns>MCAR_Role__c</columns>
        <columns>MCAR_First_Name__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>MCAR Email List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MCAR Email List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>